--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "github-markdown-css": "^5.1.0",
+    "normalize.css": "^8.0.1",
     "pinia": "^2.0.27",
     "vue": "^3.2.41",
     "vue-showdown": "^3.3.0"
