--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vueuse/core": "^9.6.0",
     "normalize.css": "^8.0.1",
     "pinia": "^2.0.27",
     "vue": "^3.2.41",
