--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@vueuse/core": "^9.6.0",
     "normalize.css": "^8.0.1",
     "pinia": "^2.0.27",
+    "ua-parser-js": "^1.0.32",
     "vue": "^3.2.41",
     "vue-showdown": "^3.3.0"
   },
   "devDependencies": {
+    "@types/ua-parser-js": "^0.7.36",
     "@vitejs/plugin-vue": "^3.2.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
